--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,10 @@
             
             <h2>Social</h2>
             <ul>
-                <li><a href="">LinkedIn</a></li>
-                <li><a href="">GitHub</a></li>
-                <li><a href="">ResearchGate</a></li>
-                <li><a href="">ORCID</a></li>
+                <li><a href="https://linkedin.com/in/natashayamane" target="new">LinkedIn</a></li>
+                <li><a href="https://github.com/nmy2103" target="new">GitHub</a></li>
+                <li><a href="https://www.researchgate.net/profile/Natasha-Yamane" target="new">ResearchGate</a></li>
+                <li><a href="https://orcid.org/0000-0002-3532-1563" target="new">ORCID</a></li>
             </ul>
         </div>
     </div>
