--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,9 @@
             <a href="index.html" class="title">Natasha Yamane</a>
             <ul class="navbar-list">
                 <li class="navbar-item"><a href="research.html">Research</a></li>
-                <li class="navbar-item"><a href="index.html#pubs">Publications</a></li>
+                <li class="navbar-item"><a href="index.html#pubs">Papers</a></li>
                 <li class="navbar-item"><a href="index.html#presentations">Presentations</a></li>
+                <li class="navbar-item"><a href="assets/NatashaYamane_CV.pdf" target="new">CV</a></li>
                 <li class="navbar-item clicked">Contact</li>
             </ul>
         </div>
@@ -30,7 +31,9 @@
             <h2>Physical Address</h2>
             <p>Computational Behavioral Science Lab
             <br>
-            008 Robinson Hall, Northeastern University
+            Northeastern University
+            <br>
+            008 Robinson Hall
             <br>
             360 Huntington Avenue
             <br>
@@ -48,7 +51,7 @@
     
     <footer class="footer-short">
         <div>
-            <small>© 2021 Natasha Yamane. Last updated on <a href="https://github.com/nmy2103/nmy2103.github.io">Aug 13, 2021</a>.</small>
+            <small>© 2022 Natasha Yamane. Last updated on <a href="https://github.com/nmy2103/nmy2103.github.io">November 25, 2022</a>.</small>
         </div>
     </footer>
     
