--- a/index.html
+++ b/index.html
@@ -62,19 +62,23 @@
             <ul>
                 <li><b>Wearables and Biobehavioral Health</b> (CS 4910)
                 <br>
-                Instructor of Record, <i>Northeastern University</i>
+                Instructor of Record
+                <br>
+                Khoury College of Computer Sciences, Northeastern University
                 <br>
                 Spring 2022</li>
-                <li><b>Principles of Epidemiology in Medicine and Public Health</b> (PHTH 4202)
+                <li style="margin-top: 10px"><b>Principles of Epidemiology in Medicine and Public Health</b> (PHTH 4202)
                 <br>
-                Teaching Assistant, <i>Northeastern University</i>
+                Teaching Assistant
+                <br>
+                Bouvé College of Computer Sciences, Northeastern University
                 <br>
                 Spring 2021, Farzad Noubary, PhD
                 <br>
                 Fall 2020, Matthew Goodwin, PhD</li>
             </ul>
             
-            <p align="center"><img src="assets/cat.png" width="75">
+            <p align="center" style="margin-top: 10px"><img src="assets/cat.png" width="75">
             <br>
             That's all here. Go back to the <a href="#top">top</a>.</p>
         </div>
