--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <br>
                 Teaching Assistant
                 <br>
-                Bouvé College of Computer Sciences, Northeastern University
+                Bouvé College of Health Sciences, Northeastern University
                 <br>
                 Spring 2021, Farzad Noubary, PhD
                 <br>
