updated digital business card

--- a/card.html
+++ b/card.html
@@ -4,6 +4,7 @@
 <head>
     <title>Natasha M. Yamane</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
@@ -32,11 +33,17 @@
                     <li>008 Robinson Hall</li>
                     <li>360 Huntington Avenue</li>
                     <li>Boston, MA 02115</li>
+                    <li style="margin-top: 12px; background-image: url(assets/globe-icon.svg)"><a href="http://nmy2103.github.io">nmy2103.github.io</a></li>
                 </ul>
             </div>
             <hr>
-            <p align="center" style="margin-top: 10px"><img style="vertical-align: middle" src="assets/cat.png" width="40"> <a href="assets/Natasha_Yamane.vcf">Save Contact Info</a>
+            <p align="center" style="margin-top: 10px"><img src="assets/cat.png" width="40">
         </div>
     </div>
+    <footer class="footer-card">
+        <div>
+            <small><a href="assets/Natasha_Yamane.vcf"><b>SAVE CONTACT INFO</b></a></small>
+        </div>
+    </footer>
 </body>
 </html>
