revised business card text

--- a/card.html
+++ b/card.html
@@ -23,7 +23,7 @@
             <h3 style="margin-top: 0px; margin-bottom: 5px">Northeastern University</h3>
             Khoury College of Computer Sciences
             <br>
-            Bouve College of Health Sciences
+            Bouvé College of Health Sciences
             </p></center>
             <div class="contact">
                 <ul>
