--- a/card.html
+++ b/card.html
@@ -27,13 +27,14 @@
             </p></center>
             <div class="contact">
                 <ul>
-                    <li style="background-image: url(assets/paper-plane-icon.svg)">yamane.n@northeastern.edu</li>
-                    <li style="margin-top: 12px; background-image: url(assets/mobile-icon.svg)">+1.917.854.9973</li>
+                    <li style="background-image: url(assets/paper-plane-icon.svg)"><a href="mailto:yamane.n@northeastern.edu">yamane.n@northeastern.edu</a></li>
+                    <li style="margin-top: 12px; background-image: url(assets/mobile-icon.svg)"><a href="sms:+19178549973">+1.917.854.9973</a></li>
                     <li style="margin-top: 12px; background-image: url(assets/pin-icon.svg)">Computational Behavioral Science Lab</li>
                     <li>008 Robinson Hall</li>
                     <li>360 Huntington Avenue</li>
                     <li>Boston, MA 02115</li>
-                    <li style="margin-top: 12px; background-image: url(assets/globe-icon.svg)"><a href="http://nmy2103.github.io">nmy2103.github.io</a></li>
+                    <li style="margin-top: 12px; background-image: url(assets/linkedin-icon.svg)"><a href="https://linkedin.com/in/natashayamane">linkedin.com/in/natashayamane</a></li>
+                    <li style="margin-top: 12px; background-image: url(assets/globe-icon.svg)"><a href="https://nmy2103.github.io">nmy2103.github.io</a></li>
                 </ul>
             </div>
             <hr>
@@ -42,7 +43,7 @@
     </div>
     <footer class="footer-card">
         <div>
-            <small><a href="assets/Natasha_Yamane.vcf"><b>SAVE CONTACT INFO</b></a></small>
+            <a href="assets/Natasha_Yamane.vcf"><b>SAVE CONTACT INFO</b></a>
         </div>
     </footer>
 </body>
