--- a/card.html
+++ b/card.html
@@ -18,9 +18,8 @@
         <div style="padding-top: 15px">
             <center><img style="height: 175px; width: 175px; border-radius: 50%" src="assets/nyamane_profile.png">
             <h1>Natasha Yamane</h1>
-            <br>
-            <b>PhD Student</b> in Personal Health Informatics
-            <h3 style="margin-top: 0px; margin-bottom: 5px">Northeastern University</h3>
+            <div style="margin-top: 15px"><b>PhD Student</b> in Personal Health Informatics</div>
+            <h3 style="margin-top: 0px; margin-bottom: 0px">Northeastern University</h3>
             Khoury College of Computer Sciences
             <br>
             Bouvé College of Health Sciences
@@ -28,13 +27,13 @@
             <div class="contact">
                 <ul>
                     <li style="background-image: url(assets/paper-plane-icon.svg)"><a href="mailto:yamane.n@northeastern.edu">yamane.n@northeastern.edu</a></li>
-                    <li style="margin-top: 12px; background-image: url(assets/mobile-icon.svg)"><a href="sms:+19178549973">+1.917.854.9973</a></li>
+                    <li style="margin-top: 10px; background-image: url(assets/mobile-icon.svg)"><a href="sms:+19178549973">+1.917.854.9973</a></li>
                     <li style="margin-top: 12px; background-image: url(assets/pin-icon.svg)">Computational Behavioral Science Lab</li>
                     <li>008 Robinson Hall</li>
                     <li>360 Huntington Avenue</li>
                     <li>Boston, MA 02115</li>
-                    <li style="margin-top: 12px; background-image: url(assets/linkedin-icon.svg)"><a href="https://linkedin.com/in/natashayamane">linkedin.com/in/natashayamane</a></li>
-                    <li style="margin-top: 12px; background-image: url(assets/globe-icon.svg)"><a href="https://nmy2103.github.io">nmy2103.github.io</a></li>
+                    <li style="margin-top: 10px; background-image: url(assets/linkedin-icon.svg)"><a href="https://linkedin.com/in/natashayamane">linkedin.com/in/natashayamane</a></li>
+                    <li style="margin-top: 8px; background-image: url(assets/globe-icon.svg)"><a href="https://nmy2103.github.io">nmy2103.github.io</a></li>
                 </ul>
             </div>
             <hr>
