updated with recent projects

--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,9 @@
             <a href="index.html" class="title">Natasha Yamane</a>
             <ul class="navbar-list">
                 <li class="navbar-item"><a href="research.html">Research</a></li>
-                <li class="navbar-item"><a href="index.html#pubs">Papers</a></li>
-                <li class="navbar-item"><a href="index.html#presentations">Presentations</a></li>
+                <li class="navbar-item"><a href="#pubs">Papers</a></li>
                 <li class="navbar-item"><a href="assets/NatashaYamane_CV.pdf" target="new">CV</a></li>
-                <li class="navbar-item clicked">Contact</li>
+                <li class="navbar-item"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -51,7 +50,8 @@
     
     <footer class="footer-short">
         <div>
-            <small>© 2022 Natasha Yamane. Last updated on <a href="https://github.com/nmy2103/nmy2103.github.io">November 25, 2022</a>.</small>
+            <small>© 2024 Natasha Yamane. Last updated on <a
+              href="https://github.com/nmy2103/nmy2103.github.io">March 7, 2024</a>.</small>
         </div>
     </footer>
     
