updated technical component

--- a/neu/phi.html
+++ b/neu/phi.html
@@ -174,8 +174,8 @@
                 </td>
                 <td>
                     <span style="font-weight: 800; font-size: 17px">
-                        Contemporary technologies and interfaces for
-                        music-based stress management</span>
+                        CContemporary biosensing technologies and systems
+                        for music-based stress management</span>
                     <p>In the last decade, researchers have explored
                         leveraging biosensing technology to deliver music-based
                         stress management interventions across laboratory and
