fixed typo in technical component title

--- a/neu/phi.html
+++ b/neu/phi.html
@@ -174,7 +174,7 @@
                 </td>
                 <td>
                     <span style="font-weight: 800; font-size: 17px">
-                        CContemporary biosensing technologies and systems
+                        Contemporary biosensing technologies and systems
                         for music-based stress management</span>
                     <p>In the last decade, researchers have explored
                         leveraging biosensing technology to deliver music-based
