--- a/neu/phi.html
+++ b/neu/phi.html
@@ -2,214 +2,217 @@
 <html lang="en">
 
 <head>
-    <title>Natasha M. Yamane</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="phi_style.css">
-    <script src="https://kit.fontawesome.com/b70d2090ca.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <link
+    rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+    rel="stylesheet">
+  <title>Natasha Yamane | PHI Comprehensive Exams</title>
+  <link rel="stylesheet" href="phi_style.css">
+  <script src="https://kit.fontawesome.com/b70d2090ca.js"
+          crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="phi">
-        <h3>Natasha Yamane</h3>
+<header>
+  <h1>Natasha Yamane</h1>
+  <nav>
+    <ul>
+      <li><a href="mailto:yamane.n@northeastern.edu">yamane.n@northeastern
+        .edu</a></li>
+      <li><a href="sms:+19178549973">+1.917.854.9973</a></li>
+    </ul>
+  </nav>
+</header>
 
-        <h2>PhD in Personal Health Informatics
-          <br>
-          Northeastern University</h2>
+<main>
+  <section class="program">
+    <h2>PhD in Personal Health Informatics</h2>
+    <h3>Northeastern University</h3>
+  </section>
 
-        <h1><strong>Comprehensive Exams</strong></h1>
-
-        <table>
-            <tr>
-                <td class="narrow-column">
-                    <span class="component">Research Component</span>
-                    <ul>
-                        <li><i class="fa-regular fa-newspaper"></i> EAI
-                            PervasiveHealth 2023
-                            <span class="tooltip"><i class="fa-regular fa-circle-question"></i></span>
-                        </li>
-                        <li><i class="fa-regular fa-circle-check"></i>
-                            <a href="https://pervasivehealth.eai-conferences.org/2023/accepted-papers/" target="_blank">Accepted</a>
-                        </li>
-                        <li><i style="padding-right: 1pt" class="fa-regular
+  <section class="comps">
+    <h1>Comprehensive Exams</h1>
+    <div class="exam">
+      <div class="research">
+        <h3>Research Component</h3>
+        <ul class="stats">
+          <li><i class="fa-regular fa-newspaper"></i> EAI PervasiveHealth
+            2023<span class="tooltip"><i
+              class="fa-regular fa-circle-question"></i></span></li>
+          <li><i class="fa-regular fa-circle-check"></i>
+            <a
+              href="https://pervasivehealth.eai-conferences.org/2023/accepted-papers/"
+              target="_blank">Accepted</a></li>
+          <li><i style="padding-right: 1pt" class="fa-regular
                                fa-calendar-check"></i> November 27–29,
-                            2023
-                        </li>
-                        <li><i style="padding-right: 3pt"
-                               class="fa-regular fa-note-sticky">
-                            </i>21 pages
-                        </li>
-                        <li><i style="padding-right: 3pt"
-                                    class="fa-regular
+            2023
+          </li>
+          <li><i style="padding-right: 3pt"
+                 class="fa-regular fa-note-sticky">
+          </i>21 pages
+          </li>
+          <li><i style="padding-right: 2pt"
+                 class="fa-regular
                                fa-file-lines"></i>
-                            <a href="yamane_phi_empirical.pdf" target="_blank">Download
-                                PDF</a>
-                        </li>
-                    </ul>
-                    <ul class="role">
-                        <li style="line-height: 1.3em;">
-                            Software development; Methodology;
-                            Data curation; Visualization; Validation;<br>
-                            Writing and editing
-                        </li>
-                    </ul>
-                </td>
-                <td>
-                    <span style="font-weight: 800; font-size: 17px">HeartView:
-                        An extensible, open-source, web-based signal quality
-                        assessment pipeline for ambulatory cardiovascular
-                        data</span>
-                    <p>Wearable sensing systems enable peripheral physiological
-                        data to be collected repeatedly in naturalistic
-                        settings. However, the ambulatory nature of wearable
-                        biosensors predisposes them to common signal artifacts
-                        that researchers must address before analysis. Signal
-                        quality assessment procedures are time-consuming and
-                        non-standardized across research teams, and transparent
-                        reporting of custom, closed-source pipelines needs
-                        improvement. This paper presents HeartView, an
-                        extensible, open-source, web-based signal quality
-                        assessment pipeline that visualizes and quantifies
-                        missing beats and invalid segments in heart rate
-                        variability (HRV) data obtained from ambulatory
-                        electrocardiograph (ECG) and photoplethysmograph (PPG)
-                        signals. We demonstrate the utility of our pipeline on
-                        two datasets: (1) 34 ECGs recorded with the Actiwave
-                        Cardio from children with and without autism, and (2)
-                        15 sets of ECGs and PPGs recorded with the RespiBAN and
-                        Empatica E4, respectively, from healthy adults in the
-                        publicly available WESAD dataset. Our pipeline
-                        demonstrates interpretable group differences in
-                        physiological signal quality. ECGs of children with
-                        autism contain more missing beats and invalid segments
-                        than those without autism. Similarly, PPG data contains
-                        more missing beats and invalid segments than ECG data.
-                        HeartView has a graphical user interface in the form of
-                        a web-based dashboard at
-                        <a
-                          href="https://github.com/cbslneu/heartview"
-                          target="_blank">
-                            https://github.com/cbslneu/heartview</a>.</p>
+            <a href="yamane_phi_empirical.pdf" target="_blank">Download
+              PDF</a></li>
+        </ul>
+        <ul class="role">
+          <li>Software development; Methodology; Data curation;
+            Visualization; Validation; Writing and editing
+          </li>
+        </ul>
+      </div>
 
-                </td>
-            </tr>
-        </table>
+      <div class="paper">
+        <h3>HeartView: An extensible, open-source, web-based signal quality
+          assessment pipeline for ambulatory
+          cardiovascular data</h3>
+        <p>Wearable sensing systems enable peripheral physiological
+          data to be collected repeatedly in naturalistic
+          settings. However, the ambulatory nature of wearable
+          biosensors predisposes them to common signal artifacts
+          that researchers must address before analysis. Signal
+          quality assessment procedures are time-consuming and
+          non-standardized across research teams, and transparent
+          reporting of custom, closed-source pipelines needs
+          improvement. This paper presents HeartView, an
+          extensible, open-source, web-based signal quality
+          assessment pipeline that visualizes and quantifies
+          missing beats and invalid segments in heart rate
+          variability (HRV) data obtained from ambulatory
+          electrocardiograph (ECG) and photoplethysmograph (PPG)
+          signals. We demonstrate the utility of our pipeline on
+          two datasets: (1) 34 ECGs recorded with the Actiwave
+          Cardio from children with and without autism, and (2)
+          15 sets of ECGs and PPGs recorded with the RespiBAN and
+          Empatica E4, respectively, from healthy adults in the
+          publicly available WESAD dataset. Our pipeline
+          demonstrates interpretable group differences in
+          physiological signal quality. ECGs of children with
+          autism contain more missing beats and invalid segments
+          than those without autism. Similarly, PPG data contains
+          more missing beats and invalid segments than ECG data.
+          HeartView has a graphical user interface in the form of
+          a web-based dashboard at
+          <a
+            href="https://github.com/cbslneu/heartview"
+            target="_blank">
+            https://github.com/cbslneu/heartview</a>.</p>
+      </div>
+    </div>
 
-        <table>
-            <tr>
-                <td class="narrow-column">
-                    <span class="component">Health Component</span>
-                    <ul>
-                        <li><i class="fa-regular fa-newspaper"></i> Mapping
-                            review
-                            <span class="tooltip_review"><i
-                              class="fa-regular fa-circle-question"></i></span>
-                        </li>
-                        <li><i style="padding-right: 1pt" class="fa-regular
+    <div class="exam">
+      <div class="research">
+        <h3>Health Component</h3>
+        <ul class="stats">
+          <li><i class="fa-regular fa-newspaper"></i> Mapping
+            review
+            <span class="tooltip_review"><i
+              class="fa-regular fa-circle-question"></i></span>
+          </li>
+          <li><i style="padding-right: 1pt" class="fa-regular
                                fa-calendar-check"></i> January 5, 2024
-                        </li>
-                        <li><i style="padding-right: 3pt"
-                               class="fa-regular fa-note-sticky">
-                            </i>44 pages
-                        </li>
-                        <li><i style="padding-right: 3pt" class="fa-regular
+          </li>
+          <li><i style="padding-right: 3pt"
+                 class="fa-regular fa-note-sticky">
+          </i>44 pages
+          </li>
+          <li><i style="padding-right: 3pt" class="fa-regular
                                fa-file-lines"></i>
-                            <a href="yamane_phi_health.pdf"
-                               target="_blank">Download PDF</a>
-                        </li>
-                    </ul>
-                </td>
-                <td>
-                    <span style="font-weight: 800; font-size: 17px">From
-                        beat to better: Exploring music-based entrainment
-                        for health</span>
-                    <p>Music has the increasingly recognized potential to
-                        promote physical and mental health, as evidenced by
-                        prior work on music engagement and its benefits on
-                        improved physical, cognitive, immune, and
-                        socioemotional functioning. However, the mechanisms
-                        underlying such effects still need to be better
-                        understood. One process that researchers have
-                        frequently quantified to understand these effects is
-                        music-based entrainment. This mapping review aims to
-                        (1) summarize evidence for the effects of music
-                        engagement in various health domains through
-                        intrapersonal and interpersonal entrainment and (2)
-                        identify open questions for future work. This review
-                        serves as a resource to inform the research priorities
-                        of health and music psychology experts who may be
-                        interested in evaluating and designing music-based
-                        psychosocial paradigms and health interventions.</p>
+            <a href="yamane_phi_health.pdf"
+               target="_blank">Download PDF</a>
+          </li>
+        </ul>
+      </div>
 
-                </td>
-            </tr>
-        </table>
+      <div class="paper">
+        <h3>From beat to better: Exploring music-based entrainment for
+          health</h3>
+        <p>Music has the increasingly recognized potential to
+          promote physical and mental health, as evidenced by
+          prior work on music engagement and its benefits on
+          improved physical, cognitive, immune, and
+          socioemotional functioning. However, the mechanisms
+          underlying such effects still need to be better
+          understood. One process that researchers have
+          frequently quantified to understand these effects is
+          music-based entrainment. This mapping review aims to
+          (1) summarize evidence for the effects of music
+          engagement in various health domains through
+          intrapersonal and interpersonal entrainment and (2)
+          identify open questions for future work. This review
+          serves as a resource to inform the research priorities
+          of health and music psychology experts who may be
+          interested in evaluating and designing music-based
+          psychosocial paradigms and health interventions.</p>
+      </div>
+    </div>
 
-        <table>
-            <tr>
-                <td class="narrow-column">
-                    <span class="component">Technical Component</span>
-                    <ul>
-                        <li><i class="fa-regular fa-newspaper"></i> Mapping
-                            review
-                            <span class="tooltip_review"><i
-                              class="fa-regular fa-circle-question"></i></span>
-                        </li>
-                        <li><i style="padding-right: 1pt" class="fa-regular
+    <div class="exam">
+      <div class="research">
+        <h3>Technical Component</h3>
+        <ul class="stats">
+          <li><i class="fa-regular fa-newspaper"></i> Mapping
+            review
+            <span class="tooltip_review"><i
+              class="fa-regular fa-circle-question"></i></span>
+          </li>
+          <li><i style="padding-right: 1pt" class="fa-regular
                                fa-calendar-check"></i> March 7, 2024
-                        </li>
-                        <li><i style="padding-right: 3pt"
-                               class="fa-regular fa-note-sticky">
-                            </i>34 pages
-                        </li>
-                        <li><i style="padding-right: 3pt" class="fa-regular
+          </li>
+          <li><i style="padding-right: 3pt"
+                 class="fa-regular fa-note-sticky">
+          </i>34 pages
+          </li>
+          <li><i style="padding-right: 3pt" class="fa-regular
                                fa-file-lines"></i>
-                            <a href="yamane_phi_tech.pdf"
-                               target="_blank">Download PDF</a>
-                        </li>
-                    </ul>
-                </td>
-                <td>
-                    <span style="font-weight: 800; font-size: 17px">
-                        Contemporary biosensing technologies and systems
-                        for music-based stress management</span>
-                    <p>In the last decade, researchers have explored
-                        leveraging biosensing technology to deliver music-based
-                        stress management interventions across laboratory and
-                        naturalistic contexts. From interactive music
-                        applications and affective music players to
-                        biofeedback devices and brain-computer interfaces, these
-                        technologies and systems are designed to offer users
-                        engaging and personalized experiences that enhance
-                        stress-related therapeutic outcomes. Drawing upon a
-                        range of systematic reviews and empirical research
-                        published in the last decade, this mapping review
-                        categorizes the current landscape of systems
-                        integrating biosensing technology and music for stress
-                        management. By mapping the current landscape, this
-                        review offers insights into emerging trends and
-                        existing gaps and guides research and development at
-                        the intersection of music, affective computing, and
-                        therapy.</p>
-                </td>
-            </tr>
-        </table>
-    </div>
+            <a href="yamane_phi_tech.pdf"
+               target="_blank">Download PDF</a>
+          </li>
+        </ul>
+      </div>
 
-    <div class="pop-out-div">
-        <div class="container">
-            <div class="cat"><img src="../assets/cat.png" width="40"></div>
-            <div class="contact">
-                <a href="mailto:yamane.n@northeastern.edu">yamane.n@northeastern.edu</a>
-                <br>
-                <a href="sms:+19178549973">+1.917.854.9973</a>
-                <br>
-                <span class="update">Last updated: March 7, 2024</span>
-            </div>
-        </div>
+      <div class="paper">
+        <h3>Contemporary biosensing technologies and systems for music-based
+          stress management</h3>
+        <p>In the last decade, researchers have explored
+          leveraging biosensing technology to deliver music-based
+          stress management interventions across laboratory and
+          naturalistic contexts. From interactive music
+          applications and affective music players to
+          biofeedback devices and brain-computer interfaces, these
+          technologies and systems are designed to offer users
+          engaging and personalized experiences that enhance
+          stress-related therapeutic outcomes. Drawing upon a
+          range of systematic reviews and empirical research
+          published in the last decade, this mapping review
+          categorizes the current landscape of systems
+          integrating biosensing technology and music for stress
+          management. By mapping the current landscape, this
+          review offers insights into emerging trends and
+          existing gaps and guides research and development at
+          the intersection of music, affective computing, and
+          therapy.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Additional sections here -->
+
+</main>
+
+<footer>
+  <p>&copy; 2024 Natasha M. Yamane. All rights reserved.
+    <br>
+    <span class="updated">Last updated: 07 March 2024</span>
+  </p>
+</footer>
 </body>
 </html>
