added faculty info

--- a/neu/phi.html
+++ b/neu/phi.html
@@ -74,6 +74,9 @@
         <h3>HeartView: An extensible, open-source, web-based signal quality
           assessment pipeline for ambulatory
           cardiovascular data</h3>
+        <p class="reviewer"><i><span style="color: #003c80;">Advising
+          Faculty:</span> Drs. Matthew S. Goodwin and Varun Mishra, Khoury
+          College & Bouvé College</i></p>
         <p>Wearable sensing systems enable peripheral physiological
           data to be collected repeatedly in naturalistic
           settings. However, the ambulatory nature of wearable
@@ -135,6 +138,8 @@
       <div class="paper">
         <h3>From beat to better: Exploring music-based entrainment for
           health</h3>
+        <p class="reviewer"><i><span style="color: #003c80;">Reviewing
+          Faculty:</span> Dr. Aston K. McCulough, Bouvé College & CAMD</i></p>
         <p>Music has the increasingly recognized potential to
           promote physical and mental health, as evidenced by
           prior work on music engagement and its benefits on
@@ -182,6 +187,9 @@
       <div class="paper">
         <h3>Contemporary biosensing technologies and systems for music-based
           stress management</h3>
+        <p class="reviewer"><i><span style="color: #003c80;">Reviewing
+          Faculty:</span> Dr. Varun Mishra, Khoury College & Bouvé
+          College</i></p>
         <p>In the last decade, researchers have explored
           leveraging biosensing technology to deliver music-based
           stress management interventions across laboratory and
