--- a/neu/phi.html
+++ b/neu/phi.html
@@ -139,7 +139,7 @@
         <h3>From beat to better: Exploring music-based entrainment for
           health</h3>
         <p class="reviewer"><i><span style="color: #003c80;">Reviewing
-          Faculty:</span> Dr. Aston K. McCulough, Bouvé College & CAMD</i></p>
+          Faculty:</span> Dr. Aston K. McCullough, Bouvé College & CAMD</i></p>
         <p>Music has the increasingly recognized potential to
           promote physical and mental health, as evidenced by
           prior work on music engagement and its benefits on
