added advisor statement

--- a/neu/phi.html
+++ b/neu/phi.html
@@ -63,11 +63,6 @@
             <a href="yamane_phi_empirical.pdf" target="_blank">Download
               PDF</a></li>
         </ul>
-        <ul class="role">
-          <li>Software development; Methodology; Data curation;
-            Visualization; Validation; Writing and editing
-          </li>
-        </ul>
       </div>
 
       <div class="paper">
@@ -108,6 +103,17 @@
             href="https://github.com/cbslneu/heartview"
             target="_blank">
             https://github.com/cbslneu/heartview</a>.</p>
+        <h4 id="contributions">Advisor's Statement of Student
+          Contributions</h4>
+        <p class="contributions">
+          Natasha Yamane made several critical contributions to "HeartView:
+          An extensible, open-source, web-based signal quality assessment
+          pipeline for ambulatory cardiovascular data" published in EAI
+          Pervasive Health 2023 as the research component of her PHI
+          qualifying exams. These efforts included software development,
+          data curation, visualization, validation testing, and substantial
+          involvement in writing and editing sections of the manuscript.
+        </p>
       </div>
     </div>
 
