--- a/card.html
+++ b/card.html
@@ -18,7 +18,7 @@
         <div style="padding-top: 15px">
             <center><img style="height: 175px; width: 175px; border-radius: 50%" src="assets/nyamane_profile.png">
             <h1>Natasha Yamane</h1>
-            <div style="margin-top: 15px"><b>PhD Student</b> in Personal Health Informatics</div>
+            <div style="margin-top: 15px"><b>PhD Candidate</b> in Personal Health Informatics</div>
             <h3 style="margin-top: 0px; margin-bottom: 0px">Northeastern University</h3>
             Khoury College of Computer Sciences
             <br>
