updated with recent projects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h2>About</h2>
             <p><img class="profile-picture" src="assets/nyamane_profile.png"></p>
-            <p>I am a fourth-year PhD student studying <a
+            <p>I am a PhD Candidate studying <a
               href="https://phi.khoury.northeastern.edu/" target="new">Personal
                 Health Informatics</a> at the Khoury College of Computer
                 Sciences and Bouvé College of Health Sciences at Northeastern
@@ -51,17 +51,28 @@
                 <li>Autism spectrum disorder</li>
                 <li>Computational behavioral science</li>
                 <li>Interpersonal biobehavioral synchrony</li>
-                <li>Health informatics and digital health technologies</li>
+                <li>Music-based digital health interventions</li>
+                <li>Wearable systems</li>
             </ul>
             
             <h2 id="pubs">Papers</h2>
             <ol>
-                <li><b>Yamane, N.</b>, Mishra, V., & Goodwin, M. S. (in press).
+                <li>Dunn, J., Mishra, V., Shandhi, M. M. H., Jeong, H.,
+                    <b>Yamane, N.</b>, Watanabe, Y., & Goodwin, M. S.
+                    (Under review). Building an open-source community to
+                    enhance autonomic nervous system signal analysis:
+                    DBDP-Autonomic. Preprint available on arXiv: <a
+                      href="https://arxiv.org/abs/2403.17165"
+                      target="new">2403.17165</a>.</li>
+                <li><b>Yamane, N.</b>, Mishra, V., & Goodwin, M. S. (2024).
                     HeartView: An extensible, open-source, web-based signal
-                    quality assessment pipeline for ambulatory cardiovascular
-                    data. <i>Proceedings of the 17th EAI International
-                        Conference on Pervasive Computing Technologies for
-                        Healthcare</i>, 1–21.
+                    quality assessment pipeline for ambulatory
+                    cardiovascular data. In D. Salvi, P. Van Gorp, & S. A.
+                    Shah (Eds.), Pervasive Computing Technologies for
+                    Healthcare (pp. 107–123). Springer Nature Switzerland.
+                    doi:<a
+                      href="https://doi.org/10.1007/978-3-031-59717-6_8"
+                      target="new">10.1007/978-3-031-59717-6_8</a>.
                 </li>
                 <li><b>Yamane, N.</b>, Snow, A., Fein, D., Naigles, L., &
                     Goldman, S. (2022). Brief report: Parent-guided movements
@@ -96,6 +107,26 @@
             
             <h2 id="presentations">Selected Presentations</h2>
             <ol>
+                <li><b>Yamane, N.</b>, Lansberry, H., & Goodwin, M. S.
+                    (Under review). An exploratory study of cardiac
+                    synchrony and joint engagement in parent-child dyads of
+                    autistic and neurotypical children. Submitted to the 2025
+                    INSAR Annual Meeting, Seattle, WA.
+                </li>
+                <li>Murali, P., <b>Yamane, N.</b>, Hernandez, J., Marsella,
+                    S., Goodwin, M., & Bickmore, T. (2024, September).
+                    Feeling-the-Beat: Enhancing empathy and engagement
+                    during public speaking through heart rate sharing.
+                    Talk presented at ACII 2024: 12th International
+                    Conference on Affective Computing & Intelligent
+                    Interaction, Glasgow, Scotland.</li>
+                <li><b>Yamane, N.</b>, Mishra, V., & Goodwin, M. S. (2023,
+                    November). HeartView: An extensible, open-source,
+                    web-based signal quality assessment pipeline for
+                    ambulatory cardiovascular data. Talk presented at
+                    EAI PervasiveHealth 2023: 17th International EAI
+                    Conference on Pervasive Computing Technologies for
+                    Healthcare, Malmö, Sweden.</li>
                 <li><b>Yamane, N.</b>, Mishra, V., & Goodwin, M. S. (2023).
                     <i>Developing an open-source web-based data quality
                         assessment pipeline for analysis of ambulatory
@@ -172,7 +203,7 @@
     <footer class="footer">
         <div>
             <small>© 2024 Natasha Yamane. Last updated on <a
-              href="https://github.com/nmy2103/nmy2103.github.io">March 7, 2024</a>.</small>
+              href="https://github.com/nmy2103/nmy2103.github.io">October 25, 2024</a>.</small>
         </div>
     </footer>
 </body>
